# gtest-cmake-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/thing/: CMakeLists.txt
src/thing/include/: thing.h
src/thing/src/: thing.cpp
test/: CMakeLists.txt  main.cpp
test/thing/: CMakeLists.txt  thingtest.cpp
